--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -14,6 +14,13 @@
 
     --hover-color: #EFEFEF;
     --active-color: #F1F0FF;
+
+    --status-on: #00BB00;
+    --status-off: #999999;
+
+    --toast-normal: #DDDDDD;
+    --toast-successful: #00BB00;
+    --toast-error: #FF0000;
 }
 * {
     line-height: 1.5;
@@ -31,12 +38,21 @@
     color: #fff;
 } */
 
+@keyframes toast{
+    0%{
+        transform: translateX(calc(100% + 15px));
+    }
+    100%{
+        transform: translateX(calc(0%));
+    }
+}
+
 html {
     height: 100vh;
     height: 100svh;
     width: 100%;
     overflow-y: auto;
-
+    
     body {
         font-size: 16px;
         height: 100%;
@@ -44,6 +60,75 @@ html {
         background-color: #eef5fd;
         background-color: var(--bgr-primary);
         color: var(--text-color);
+        
+        .toast.successful{
+            animation: toast .5s ease-out forwards;
+            
+            .toast-icon{
+                background-color: var(--toast-successful);
+            }
+        }
+        
+        .toast.error{
+            animation: toast .5s ease-out forwards;
+            
+            .toast-icon{
+                background-color: var(--toast-error);
+            }
+        }
+        
+        .toast{
+            transform: translateX(calc(100% + 15px));
+            position: fixed;
+            height: 55px;
+            top: 10px;
+            right: 15px;
+            background-color: var(--bgr-secondary-1);
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+
+            border-radius: 6px;
+            overflow: hidden;
+
+            .toast-icon{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-shrink: 0;
+                background-color: var(--toast-normal);
+                padding: 10px;
+
+                i{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-shrink: 0;
+                    height: 35px;
+                    width: 35px;
+                    font-size: 30px;
+                    color: #fff;
+                }
+            }
+
+            .toast-info{
+                display: flex;
+                justify-content: flex-start;
+                align-items: flex-start;
+                flex-direction: column;
+                height: 100%;
+                padding: 5px 0 0;
+
+                .toast-title{
+                    font-weight: 500;
+                }
+                .toast-content{
+                    font-size: 12px;
+                }
+            }
+        }
     }
 }
 
@@ -233,13 +318,13 @@ input[type="password"]::-ms-clear {
                 /* background-color: var(--primary-color); */
 
 
-                .active:last-child {
+                /* .active:last-child {
                     border-radius: 0 0 10px 10px !important;
                 }
 
                 .active:last-child:hover {
                     border-radius: 0 0 10px 10px !important;
-                }
+                } */
 
                 .dot {
                     position: absolute;
@@ -253,6 +338,13 @@ input[type="password"]::-ms-clear {
                 .user:hover {
                     background-color: var(--hover-color);
                     border-radius: 10px;
+                    
+                    .user-info{
+
+                        .status::before {
+                            border: 2px solid var(--hover-color);
+                        }
+                    }
                 }
 
                 .active {
@@ -296,9 +388,28 @@ input[type="password"]::-ms-clear {
                         }
                     }
 
+                    .user-info.on{
+                        .status::before{
+                            background-color: var(--status-on);
+                        }
+                    }
                     .user-info {
+                        position: relative;
 
-
+                        .status::before {
+                            content: '';
+                            height: 8px;
+                            width: 8px;
+                            background-color: var(--status-off);
+                            position: absolute;
+                            border-radius: 50%;
+                            left: 0;
+                            bottom: 0;
+                            border: 2px solid #fff;
+                            border: 2px solid var(--bgr-secondary-1);
+                            transform: translateX(-23px);
+                        }
+                        
                         .user-name {
                             font-weight: 600;
                         }
@@ -330,11 +441,41 @@ input[type="password"]::-ms-clear {
         border-radius: 16px;
         margin-left: 10px;
 
+        #ready-start.deactive{
+            display: none;
+        }
+
+        #ready-start{
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            flex: 1;
+            gap: 20px;
+
+            img{
+                max-width: 100%;
+                width: 230px;
+            }
+            
+            p{
+                border-radius: 20px;
+                padding: 8px 14px;
+                background-color: var(--primary-color);
+                color: var(--text-msg-color);
+            }
+        }
+
+        .wrapper.active{
+            display: flex;
+        }
+
         .wrapper {
             padding: 15px;
             width: 100%;
             height: 100%;
-            display: flex;
+            display: none;
             /* justify-content: center;
             align-items: center; */
             flex-direction: column;
@@ -368,6 +509,13 @@ input[type="password"]::-ms-clear {
 
                 .user:hover {
                     background-color: var(--hover-color);
+
+                    .user-info{
+
+                        .status::before {
+                            border: 2px solid var(--hover-color);
+                        }
+                    }
                 }
 
                 .user {
@@ -408,6 +556,12 @@ input[type="password"]::-ms-clear {
                         }
                     }
 
+                    .user-info.on{
+                        .status::before{
+                            background-color: var(--status-on);
+                        }
+                    }
+
                     .user-info {
                         position: relative;
                         height: 45px;
@@ -424,13 +578,12 @@ input[type="password"]::-ms-clear {
                             content: '';
                             height: 8px;
                             width: 8px;
-                            background-color: #00bb00;
+                            background-color: var(--status-off);
                             position: absolute;
                             border-radius: 50%;
                             left: 0;
                             bottom: 0;
-                            border: 2px solid #fff;
-                            border: 2px solid var(--bgr-secondary);
+                            border: 2px solid var(--bgr-secondary-1);
                             transform: translateX(-23px);
                         }
 
@@ -564,17 +717,18 @@ input[type="password"]::-ms-clear {
                     background-color: var(--input-color);
                     border-radius: 20px;
                     height: fit-content;
-                    padding: 8px 8px 8px 12px;
+                    padding: 8px 14px;
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    min-height: 40px;
 
                     textarea {
                         background-color: transparent;
                         border: unset;
                         overflow: hidden;
                         resize: none;
-                        /* height: 24px; */
+                        min-height: 24px;
                         vertical-align: middle;
                         font-size: 16px;
                         width: 100%;
@@ -653,6 +807,7 @@ input[type="password"]::-ms-clear {
                 }
 
                 .fa-xmark {
+                    z-index: 1;
                     position: absolute;
                     height: 40px;
                     width: 40px;
@@ -1085,7 +1240,9 @@ input[type="password"]::-ms-clear {
 
             .box-input:nth-child(2) {
                 div {
-                    grid-template-columns: auto auto auto;
+                    width: 100%;
+                    grid-template-columns: auto 1fr;
+                    /* box-shadow: 0 0 10px #000; */
                 }
             }
 
@@ -1286,6 +1443,7 @@ input[type="password"]::-ms-clear {
                 gap: 5px;
 
                 div {
+                    width: 100%;
                     display: grid;
                     place-items: center;
                     grid-template-columns: auto 1fr;
