--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -75,35 +75,39 @@ body {
     background-color: var(--bgr-primary);
     color: var(--text-color);
 
-    .toast.successful {
-        animation: toast .5s ease-out forwards;
-        background-color: var(--toast-successful);
-
-        .cooldown {
-            animation: cooldown 3s ease-out forwards;
-        }
-    }
-
-    .toast.error {
-        animation: toast .5s ease forwards;
-        background-color: var(--toast-error);
-
-        .cooldown {
-            animation: cooldown 3s ease-out forwards;
-        }
-
-    }
-
     .toast {
+        z-index: 999;
         transform: translateX(calc(100% + 15px));
         position: fixed;
         top: 10px;
         right: 15px;
-        background-color: var(--toast-normal);
+        background-color: var(--bgr-secondary-1);
 
 
         border-radius: 6px;
         overflow: hidden;
+
+        box-shadow: 3px 3px 10px #00000012;
+
+        .wrapper::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            width: 10px;
+            background-color: var(--toast-normal);
+        }
+        .wrapper::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 4px;
+            bottom: 0;
+            width: 13px;
+            background-color: var(--bgr-secondary-1);
+            border-radius: 6px;
+        }
 
         .wrapper {
             position: relative;
@@ -112,7 +116,9 @@ body {
             align-items: center;
             gap: 10px;
 
-            padding: 5px 20px 7px 10px;
+            padding: 5px 20px 5px 12px;
+
+            min-width: 250px;
 
 
             .toast-icon {
@@ -120,6 +126,7 @@ body {
                 justify-content: center;
                 align-items: center;
                 flex-shrink: 0;
+                color: var(--toast-normal);
 
                 i {
                     display: flex;
@@ -129,7 +136,6 @@ body {
                     height: 35px;
                     width: 35px;
                     font-size: 20px;
-                    color: var(--text-msg-color);
                 }
             }
 
@@ -138,9 +144,8 @@ body {
                 justify-content: flex-start;
                 align-items: flex-start;
                 flex-direction: column;
-                
+
                 height: 100%;
-                color: var(--text-msg-color);
 
                 .toast-title {
                     font-weight: 500;
@@ -153,7 +158,7 @@ body {
                 }
             }
 
-            .cooldown {
+            /* .cooldown {
                 content: '';
                 position: absolute;
                 bottom: 0;
@@ -161,8 +166,44 @@ body {
                 width: 100%;
                 height: 2px;
                 background-color: var(--text-msg-color);
-            }
+                z-index: 1;
+            } */
         }
+    }
+
+    .toast.successful {
+        animation: toast .5s ease-out forwards;
+
+        .wrapper::before{
+            background-color: var(--toast-successful);
+        }
+        
+        .toast-icon{
+            color: var(--toast-successful);
+        }
+        
+        .cooldown {
+            animation: cooldown 3s ease-out forwards;
+            background-color: var(--toast-successful);
+        }
+    }
+
+    .toast.error {
+        animation: toast .5s ease forwards;
+
+        .wrapper::before{
+            background-color: var(--toast-error);
+        }
+        
+        .toast-icon{
+            color: var(--toast-error);
+        }
+        
+        .cooldown {
+            animation: cooldown 3s ease-out forwards;
+            background-color: var(--toast-error);
+        }
+
     }
 }
 
@@ -655,10 +696,15 @@ input[type="password"]::-ms-clear {
 
                         .msg-content {
                             max-width: 85%;
+                            width: fit-content;
                             background-color: var(--msg-color);
                             color: var(--text-color);
                             border-radius: 20px;
                             padding: 8px 12px 8px 12px;
+
+                            word-break: break-word;
+                            overflow-wrap: break-word;
+                            white-space: normal;
 
                         }
                     }
