--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -98,6 +98,7 @@ body {
             width: 10px;
             background-color: var(--toast-normal);
         }
+
         .wrapper::after {
             content: '';
             position: absolute;
@@ -173,14 +174,14 @@ body {
     .toast.successful {
         animation: toast .5s ease-out forwards;
 
-        .wrapper::before{
+        .wrapper::before {
             background-color: var(--toast-successful);
         }
-        
-        .toast-icon{
+
+        .toast-icon {
             color: var(--toast-successful);
         }
-        
+
         .cooldown {
             animation: cooldown 3s ease-out forwards;
             background-color: var(--toast-successful);
@@ -190,14 +191,14 @@ body {
     .toast.error {
         animation: toast .5s ease forwards;
 
-        .wrapper::before{
+        .wrapper::before {
             background-color: var(--toast-error);
         }
-        
-        .toast-icon{
+
+        .toast-icon {
             color: var(--toast-error);
         }
-        
+
         .cooldown {
             animation: cooldown 3s ease-out forwards;
             background-color: var(--toast-error);
@@ -383,22 +384,9 @@ input[type="password"]::-ms-clear {
             .users-list {
                 height: fit-content;
                 width: 100%;
-                /* padding: 0 15px 0 10px; */
-                padding: 0 15px 0 10px;
+                padding: 0 10px;
                 display: flex;
                 flex-direction: column;
-                /* row-gap: 8.5px; */
-
-                /* background-color: var(--primary-color); */
-
-
-                /* .active:last-child {
-                    border-radius: 0 0 10px 10px !important;
-                }
-
-                .active:last-child:hover {
-                    border-radius: 0 0 10px 10px !important;
-                } */
 
                 .dot {
                     position: absolute;
@@ -419,16 +407,6 @@ input[type="password"]::-ms-clear {
                             border: 2px solid var(--hover-color);
                         }
                     }
-                }
-
-                .active {
-                    background-color: var(--active-color);
-                }
-
-                .active:hover {
-                    background-color: var(--active-color);
-                    border-radius: unset;
-                    /* outline: var(--primary-color) solid 2px; */
                 }
 
                 .user {
@@ -500,9 +478,25 @@ input[type="password"]::-ms-clear {
                         }
                     }
                 }
+
+                .active {
+                    background-color: var(--active-color);
+
+                    .user-info {
+
+                        .status::before {
+                            border: 2px solid var(--active-color);
+                        }
+                    }
+                }
+
+                .active:hover {
+                    background-color: var(--active-color);
+                    border-radius: unset;
+                    /* outline: var(--primary-color) solid 2px; */
+                }
             }
         }
-
     }
 
     .main {
@@ -547,13 +541,14 @@ input[type="password"]::-ms-clear {
         }
 
         .wrapper {
-            padding: 15px;
+            display: none;
+            justify-content: center;
+            align-items: center;
             width: 100%;
             height: 100%;
-            display: none;
-            /* justify-content: center;
-            align-items: center; */
             flex-direction: column;
+            justify-content: space-between;
+            padding: 10px;
             gap: 10px;
 
             .title {
@@ -677,13 +672,14 @@ input[type="password"]::-ms-clear {
                 display: flex;
                 flex-direction: column-reverse;
                 justify-content: flex-start;
-                flex: 1;
-                overflow-y: scroll;
+                overflow-y: auto;
                 -ms-overflow-style: none;
                 scrollbar-width: none;
+                width: 100%;
+                height: 100%;
 
                 .msg-list {
-                    display: flex;
+                    display: none;
                     flex-direction: column;
                     gap: 10px;
 
@@ -729,15 +725,18 @@ input[type="password"]::-ms-clear {
                         margin-bottom: 20px;
                     }
                 }
+
+                .active {
+                    display: flex;
+                }
             }
 
             .input-area {
-                /* min-height: 70px; */
+                width: 100%;
                 height: fit-content;
                 display: flex;
                 justify-content: center;
                 align-items: flex-end;
-                /* padding: 10px; */
                 gap: 10px;
 
                 #option {
@@ -1614,12 +1613,16 @@ input[type="password"]::-ms-clear {
                 max-width: 100%;
 
                 .wrapper {
-                    padding: 10px;
 
-                    .title {
+                    .conversation {
+                        padding: 10px;
 
-                        #back {
-                            display: flex;
+                        .title {
+
+                            #back {
+                                display: flex;
+                            }
+
                         }
                     }
                 }
