--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -677,6 +677,7 @@ input[type="password"]::-ms-clear {
                 scrollbar-width: none;
                 width: 100%;
                 height: 100%;
+                padding: 0 10px;
 
                 .msg-list {
                     display: none;
@@ -695,7 +696,7 @@ input[type="password"]::-ms-clear {
                             background-color: var(--msg-color);
                             color: var(--text-color);
                             border-radius: 20px;
-                            padding: 8px 12px 8px 12px;
+                            padding: 8px 12px;
 
                             word-break: break-word;
                             overflow-wrap: break-word;
